// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block math renders correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    <dt-article>
      <p />
      <figure
        id="equation-1"
      >
        <p>
          <span
            class="math display"
          >
            \\[e^{i\\pi}=-1 \\]
          </span>
          <span
            class="engrafo-equation-number"
          >
            (1)
          </span>
        </p>
      </figure>
      <p />
      <p>
        <a
          href="#equation-1"
        >
          Equation 1
        </a>
        is some good math.
      </p>
    </dt-article>
    <dt-appendix>
      <div
        class="l-body"
      />
    </dt-appendix>
    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`inline math renders correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    <dt-article>
      <p>
        Ooh look some lovely maths 
        <span
          class="math inline"
        >
          \\(x^2 + y^2 = z^2\\)
        </span>
        oh yeah.
      </p>
    </dt-article>
    <dt-appendix>
      <div
        class="l-body"
      />
    </dt-appendix>
    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;
